...
    "habits_save" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Save"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Guardar"
...
    "habits_screen_title" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Habits"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Hábitos"
...
    "habits_summary_every_day" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Every day"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Cada día"
...
